added success page

--- a/public/index.html
+++ b/public/index.html
@@ -63,15 +63,15 @@
     <form method="POST" action="/student">
         <div id="fname-div">
             <label for="fname">First Name *</label>
-            <input type="text" name="first-name" placeholder="First Name" required>
+            <input type="text" id="fname" name="first-name" placeholder="First Name" required>
         </div>
         <div id="lname-div">
             <label for="lname">Last Name *</label>
-            <input type="text" name="lname" placeholder="Last Name" required>
+            <input type="text" id="lname" name="last-name" placeholder="Last Name" required>
         </div>
         <div id="email-div">
             <label for="email">Email *</label>
-            <input type="email" name="email" placeholder="Email" required>
+            <input type="email" id="email" name="email" placeholder="Email" required>
         </div>
         <input type="submit" value="Submit">
     </form>
