--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Client Data</title>
     <style>
         * { box-sizing: border-box;}
-        body { width: 100%; margin: 0; padding: 0; }
+        body { width: 100%; margin: 0; padding: 0; background-color: #EAEDED; }
         #wrapper {
             width: 30%;
             text-align: center;
@@ -22,6 +22,7 @@
             background-color: #1E8449;
             padding: 1rem 0;
             border-radius: 8px;
+            border-left: 8px solid #BA4A00;
         }
         form { 
             width: 100%; 
@@ -44,6 +45,7 @@
             cursor: pointer; 
             background-color: #1E8449;
             width: 100%; 
+            border-left: 8px solid #BA4A00;
         }
         input[type="submit"]:hover {
             color: #fff; 
@@ -53,6 +55,8 @@
             border-radius: 8px;
             margin: 0.4rem 0;
             padding: 0.4rem 0 0.8rem 0;
+            background-color: #fff;
+            border-left: 8px solid #1F618D;
         }
     </style>
 </head>
