--- a/public/success.html
+++ b/public/success.html
@@ -5,7 +5,12 @@
     <title>Client Data</title>
     <style>
         * { box-sizing: border-box;}
-        body { width: 100%; margin: 0; padding: 0; }
+        body { 
+            width: 100%; 
+            margin: 0; 
+            padding: 0; 
+            background-color: #EAEDED;  
+        }
         #wrapper {
             width: 30%;
             text-align: center;
@@ -19,7 +24,9 @@
 </head>
 <body>
     <div id="wrapper">
-        <h4>Form successfully submitted!</h4>
+        <h2>Thank you!</h2>
+        <h3>Your information successfully submitted!</h3>
+        <p style="color: red">You can close this window</p>
     </div>
 </body>
 </html>
