--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Client Data</title>
+    <title>Student Information</title>
     <style>
         * { box-sizing: border-box;}
         body { width: 100%; margin: 0; padding: 0; background-color: #EAEDED; }
