--- a/public/success.html
+++ b/public/success.html
@@ -9,7 +9,7 @@
             width: 100%; 
             margin: 0; 
             padding: 0; 
-            background-color: #EAEDED;  
+            background-color: #A9CCE3;  
         }
         #wrapper {
             width: 30%;
