--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Student Information</title>
     <style>
         * { box-sizing: border-box;}
-        body { width: 100%; margin: 0; padding: 0; background-color: #EAEDED; }
+        body { width: 100%; margin: 0; padding: 0; background-color: #A9CCE3; }
         #wrapper {
             width: 30%;
             text-align: center;
